--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc --noEmit && vite build",
+    "build:skip-check": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -20,8 +21,8 @@
     "@vue/tsconfig": "^0.5.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.20.0",
-    "typescript": "~5.8.3",
+    "typescript": "^5.9.2",
     "vite": "^5.0.0",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^2.2.12"
   }
 }
